# opentelemetry-rust

./: Cargo.toml  spec-complication-matrix  spec-complication-matrix.md
.github/workflows/: ci.yml  integration_tests.yml
examples/basic-otlp/src/: main.rs
examples/basic/src/: main.rs
examples/broken_traces/: Cargo.toml
examples/broken_traces/src/: main.rs
examples/datadog/: Cargo.toml
examples/datadog/src/: main.rs
examples/dynatrace/src/: main.rs
examples/hang-debug/: Cargo.toml
examples/hang-debug/src/: main.rs
examples/hyper-prometheus/: Cargo.toml  otel-collector-config.yaml
examples/hyper-prometheus/src/: main.rs
examples/issue-956/: Cargo.toml
examples/issue-956/src/: main.rs
examples/tokio-fun/: Cargo.toml
examples/tokio-fun/src/: main.rs
examples/tracing-jaeger/: Cargo.toml
examples/tracing-jaeger/src/: main.rs
examples/zpages/: Cargo.toml
examples/zpages/src/: main.rs
opentelemetry/: Cargo.toml  README.md
opentelemetry-api/: Cargo.toml
opentelemetry-api/src/: lib.rs
opentelemetry-api/src/global/: error_handler.rs  metrics.rs  mod.rs
opentelemetry-api/src/metrics/: meter.rs  mod.rs  noop.rs
opentelemetry-api/src/metrics/instruments/: mod.rs
opentelemetry-appender-log/src/: lib.rs
opentelemetry-appender-tracing/src/: layer.rs
opentelemetry-contrib/src/datadog/model/: mod.rs  v03.rs  v05.rs
opentelemetry-datadog/: Cargo.toml
opentelemetry-datadog/examples/src/: main.rs
opentelemetry-datadog/src/exporter/model/: mod.rs
opentelemetry-dynatrace/src/transform/: metrics.rs
opentelemetry-http/: Cargo.toml
opentelemetry-http/src/: lib.rs
opentelemetry-jaeger/: Cargo.toml  README.md
opentelemetry-jaeger/src/: lib.rs
opentelemetry-jaeger/src/exporter/: mod.rs
opentelemetry-jaeger/tests/: docker-compose.yaml  integration_test.rs  pressure_test.rs
opentelemetry-otlp/: Cargo.toml  README.md  build.rs
opentelemetry-otlp/examples/basic-otlp-http/: Cargo.toml
opentelemetry-otlp/examples/external-otlp-grpcio-async-std/: README.md
opentelemetry-otlp/src/: lib.rs  metric.rs  proto.rs  span.rs
opentelemetry-otlp/src/exporter/http/: mod.rs
opentelemetry-otlp/src/transform/: traces.rs
opentelemetry-otlp/tests/: Dockerfile  docker-compose.yaml
opentelemetry-otlp/tests/integration_test/: Cargo.toml  Dockerfile  docker-compose.yaml  traces.json
opentelemetry-otlp/tests/integration_test/src/: lib.rs  main.rs
opentelemetry-otlp/tests/integration_test/src/setups/: traces.rs
opentelemetry-otlp/tests/integration_test/tests/: traces.rs
opentelemetry-prometheus/: Cargo.toml
opentelemetry-sdk/: Cargo.toml
opentelemetry-sdk/benches/: metric.rs  sampling.rs
opentelemetry-sdk/src/: lib.rs  runtime.rs
opentelemetry-sdk/src/export/: mod.rs
opentelemetry-sdk/src/export/metrics/: mod.rs
opentelemetry-sdk/src/logs/: log_emitter.rs  log_processor.rs
opentelemetry-sdk/src/metrics/: mod.rs  provider.rs  registry.rs  view.rs
opentelemetry-sdk/src/metrics/aggregators/: histogram.rs  last_value.rs  mod.rs  sum.rs
opentelemetry-sdk/src/metrics/controllers/: basic.rs
opentelemetry-sdk/src/metrics/sdk_api/: instrument_kind.rs  mod.rs  wrap.rs
opentelemetry-sdk/src/metrics/selectors/: simple.rs
opentelemetry-sdk/src/propagation/: composite.rs  trace_context.rs
opentelemetry-sdk/src/resource/: mod.rs
opentelemetry-sdk/src/testing/: mod.rs
opentelemetry-sdk/src/testing/trace/: mod.rs  span_exporter.rs  span_exporters.rs
opentelemetry-sdk/src/trace/: mod.rs  provider.rs  runtime.rs  sampler.rs  span.rs  span_processor.rs  tracer.rs
opentelemetry-sdk/src/trace/id_generator/: mod.rs
opentelemetry-zipkin/: Cargo.toml
opentelemetry-zipkin/examples/: zipkin.rs
opentelemetry-zipkin/src/exporter/: mod.rs
opentelemetry-zipkin/src/exporter/model/: span.rs
opentelemetry-zipkin/src/model/: mod.rs
opentelemetry-zpages/: Cargo.toml  build.rs
opentelemetry-zpages/src/: lib.rs
opentelemetry-zpages/src/proto/: tracez.rs
opentelemetry-zpages/src/trace/: aggregator.rs  mod.rs  span_processor.rs  span_queue.rs
opentelemetry/benches/: batch_span_processor.rs  spans_processor.rs  trace.rs
opentelemetry/src/: lib.rs  util.rs
opentelemetry/src/global/: logs.rs
opentelemetry/src/logs/: logger.rs  noop.rs
opentelemetry/src/sdk/: env.rs  resource.rs
opentelemetry/src/sdk/export/trace/: mod.rs
opentelemetry/src/sdk/trace/: config.rs  span.rs  span_processor.rs
opentelemetry/src/testing/: trace.rs
src/: lib.rs
src/api/: baggage.rs  mod.rs
src/api/trace/: context.rs  span_reference.rs  tracer.rs
src/exporter/trace/: stdout.rs
src/global/: propagation.rs
src/sdk/propagation/: baggage.rs  composite.rs
src/sdk/trace/: span_processor.rs
src/sdk/trace/id_generator/: aws.rs
