[workspace]
members = [
    "opentelemetry",
    "opentelemetry-contrib",
    "opentelemetry-http",
    "opentelemetry-jaeger",
    "opentelemetry-otlp",
    "opentelemetry-prometheus",
    "opentelemetry-semantic-conventions",
    "opentelemetry-zipkin",
    "opentelemetry-zpages",
    "examples/actix-udp",
    "examples/actix-http",
    "examples/actix-http-tracing",
    "examples/actix-udp",
    "examples/async",
    "examples/aws-xray",
    "examples/basic",
    "examples/basic-otlp",
    "examples/datadog",
    "examples/grpc",
    "examples/http",
    "examples/tracing-grpc",
    "examples/zipkin",
    "examples/tracing-grpc"
]
