[package]
name = "opentelemetry-http"
version = "0.10.0"
description = "Helper implementations for exchange of traces and metrics over HTTP"
homepage = "https://github.com/open-telemetry/opentelemetry-rust"
repository = "https://github.com/open-telemetry/opentelemetry-rust"
keywords = ["opentelemetry", "tracing", "metrics"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
async-trait = "0.1"
bytes = "1"
http = "1.0"
hyper = { version = "1.0", default-features = false, features = ["http2", "client"], optional = true }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "http1"], optional = true }
http-body-util = { version = "0.1" }
futures-executor = { version = "0.3", optional = true }
opentelemetry = { version = "0.21", path = "../opentelemetry", features = ["trace"] }
tokio = { version = "1.0", default-features = false, features = ["time"], optional = true }

[features]
hyper_client = ["hyper", "hyper-util", "futures-executor", "tokio"]