[package]
name = "opentelemetry-zipkin"
version = "0.19.0"
description = "Zipkin exporter for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
repository = "https://github.com/open-telemetry/opentelemetry-rust/tree/main/opentelemetry-zipkin"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["hyper_client"]
hyper_client = ["hyper", "hyper-util", "bytes"]

[dependencies]
async-trait = "0.1"
opentelemetry = { path = "../opentelemetry" }
opentelemetry_sdk = { path = "../opentelemetry-sdk", features = ["trace"] }
opentelemetry-http = { path = "../opentelemetry-http" }
opentelemetry-semantic-conventions = { version = "0.13", path = "../opentelemetry-semantic-conventions" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
typed-builder = "0.12"
once_cell = "1.12"
http = "1.0.0"
thiserror = { version = "1.0" }
hyper = { version = "1.0", default-features = false, features = ["http2", "client"], optional = true }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "http1", "tokio"], optional = true }
bytes = { version = "1.0" , optional = true}

futures-core = "0.3"

[dev-dependencies]
futures-util = { version = "0.3", features = ["io"] }
opentelemetry_sdk = { default-features = false, features = ["trace", "testing"], path = "../opentelemetry-sdk" }
opentelemetry-http = { path = "../opentelemetry-http", features = ["hyper_client"] }
temp-env = "0.3.6"
tokio = "1.34.0"
http-body = "1"
