[package]
name = "hyper-prometheus"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { path = "../../opentelemetry", features = ["rt-tokio"] }
opentelemetry-prometheus = { path = "../../opentelemetry-prometheus" }
opentelemetry-otlp = { path = "../../opentelemetry-otlp", features = ["metrics"] }
prometheus = "0.13"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.9.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.19"
