[package]
name = "tokio-fun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures-channel = "0.3.30"
futures-util = "0.3.30"
futures-executor = "0.3.30"
