[package]
name = "tracing-jaeger"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter", "json"] }
opentelemetry = { version = "0.22.0" }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio"] }
opentelemetry-aws = "0.10.0"
opentelemetry-otlp = { version = "0.15.0", features = ["grpc-tonic", "tls"] }
opentelemetry-stdout = { version = "0.3.0" , features = ["trace"] }
tracing-opentelemetry = "0.23.0"
tokio = { version = "1.36.0", features = ["full"] }
